2011-06-29  Martin Jambor  <mjambor@suse.cz>
	Backport from mainline
	2011-06-24  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimizations/49516
	* g++.dg/tree-ssa/pr49516.C: New test.

2011-06-28 Changpeng Fang <changpeng.fang@amd.com>
	Backport from mainline
	2011-03-27  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/avx256-unaligned-load-1.c: New.
	* gcc.target/i386/avx256-unaligned-load-2.c: Likewise.
	* gcc.target/i386/avx256-unaligned-load-3.c: Likewise.
	* gcc.target/i386/avx256-unaligned-load-4.c: Likewise.
	* gcc.target/i386/avx256-unaligned-load-5.c: Likewise.
	* gcc.target/i386/avx256-unaligned-load-6.c: Likewise.
	* gcc.target/i386/avx256-unaligned-load-7.c: Likewise.
	* gcc.target/i386/avx256-unaligned-store-1.c: Likewise.
	* gcc.target/i386/avx256-unaligned-store-2.c: Likewise.
	* gcc.target/i386/avx256-unaligned-store-3.c: Likewise.
	* gcc.target/i386/avx256-unaligned-store-4.c: Likewise.
	* gcc.target/i386/avx256-unaligned-store-5.c: Likewise.
	* gcc.target/i386/avx256-unaligned-store-6.c: Likewise.
	* gcc.target/i386/avx256-unaligned-store-7.c: Likewise.

2011-06-28  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt17.ad[sb]: New test.

2011-06-28  Alexander Monakov  <amonakov@ispras.ru>

	Backport from mainline
	2011-04-08  Alexander Monakov  <amonakov@ispras.ru>

	PR target/48273
	* g++.dg/opt/pr48273.C: New.

2011-06-27  Jason Merrill  <jason@redhat.com>

	PR c++/49528
	* g++.dg/init/ref19.C: New.
	* g++.dg/cpp0x/constexpr-cleanup.C: New.

	PR c++/49440
	* g++.dg/rtti/anon-ns1.C: New.

	PR c++/49418
	* g++.dg/template/param3.C: New.

2011-06-27  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2011-06-26  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48377
	* gcc.dg/vect/pr48377.c: Add dg-require-effective-target
	non_strict_align.

	2011-06-26  Steve Ellcey  <sje@cup.hp.com>

	PR middle-end/49191
	* lib/target-supports.exp (check_effective_target_non_strict_align):
	New.

2011-06-27  Release Manager
